Changelog
=========

7.7-dev - (unreleased)
----------------------

7.6 - (2013-10-04)
------------------
* Change: updated zope imports with the versions that require minimum Plone 4.1
  [ichimdav refs #15651]
* Change: Added portal_url definition to the tooltip macro in order for it to
  be used by templates that are not dataset_view
  [ichimdav #16719]
* Bug fix: Fixed Organisation's vocabulary for organisations with non-ascii title
  [voineali refs #16804]

7.5 - (2013-09-23)
------------------
* Bug fix: fixed sorting for show last version facetnav widget
  [ghicaale refs #16784]

7.4 - (2013-09-19)
------------------
* Bug fix: optimised facetnav widget which filter for last version not to take minutes
  to compute the results as we now have all objects versionable.
  [ghicaale refs #16772]

7.3 - (2013-09-06)
------------------
* Feature: Handle "match all/any" option for anonymous users within geocoverage
  custom faceted widget
  [voineali refs #16624]
* Bug fix: Removed hardcoded AND operator within geocoverage
  facetednavigation widget
  [voineali refs #16624]
* Change: Moved temporalCoverage field/widget helpers to eea.forms in order
  to easily be reused by other packages like eea.soercontent
  [voineali refs #14900]
* Bug fix: Fixed unicode decode error when disaplying the data source.
  [ghicaale refs #16277]

7.2 - (2013-08-09)
------------------
* Change: added dependency to eea.indicators, needed for portlets.Readiness
  [szabozo0 refs #14323]

7.1 - (2013-07-11)
------------------
* Feature: added logic so DataFileLink works under EEAFigures
  [ghicaale refs #14690]

7.0 - (2013-07-08)
------------------
* Feature: added functional test covering the categories function found within
  EEAFigureFiles through the testing of 'getCategoryName',
  'getSingleEEAFigureFile' and 'getEEAFigureFiles'
  [ichimdav fixes #14712]

6.9 - (2013-06-17)
------------------
* Bug fix: restored ability to display EEAFigureFiles as categories lost in
  ticket #14699